--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "karma": "^0.13.15",
+    "karma-cli": "^0.1.1",
+    "mocha": "^2.3.4",
+    "power-assert": "^1.2.0",
     "webpack": "^1.12.9"
   }
 }
