--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "html-loader": "^0.4.0",
     "karma": "^0.13.15",
     "karma-cli": "^0.1.1",
     "mocha": "^2.3.4",
