--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "babel": "^6.3.13",
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
+    "babel-plugin-espower": "^2.0.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
     "html-loader": "^0.4.0",
     "karma": "^0.13.15",
+    "karma-browserify": "^4.4.2",
+    "karma-chai": "^0.1.0",
     "karma-cli": "^0.1.1",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
     "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
     "power-assert": "^1.2.0",
     "webpack": "^1.12.9"
   }
